--- a/Facial/Facial.csproj
+++ b/Facial/Facial.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.2" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Mono.Android">
